AC_INIT(tutocpp, 0.0.1)
AC_CONFIG_SRCDIR([configure.ac])
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_RANLIB

AM_PATH_CPPUNIT(1.9.6)

AC_OUTPUT(Makefile src/Makefile src/benchmark/Makefile src/doc/Makefile \
	src/libcnet-tests/Makefile src/libcnet-tests/data/CnetFont/Makefile \
	src/libcnet-tests/data/CnetFontSimple/Makefile src/libcnet-tests/data/CnetImage/Makefile src/libcnet-tests/data/Makefile \
	src/libcnet/Makefile src/libcnetguibase-tests/Makefile \
	src/libcnetguibase-tests/data/CnetCursor/Makefile src/libcnetguibase-tests/data/CnetMainContainer/Makefile \
	src/libcnetguibase-tests/data/CnetTextBox/Makefile src/libcnetguibase-tests/data/CnetWidget/Makefile \
	src/libcnetguibase-tests/data/Makefile src/libcnetguibase/Makefile src/progrs/Makefile)
