INCLUDES = $(all_includes) -I$(top_srcdir)/src/libcnet
METASOURCES = AUTO
noinst_DATA = test_clear.bincnetimage test_get_pixel.bincnetimage \
	test_line_diag.bincnetimage test_line_diag2.bincnetimage test_line_out.bincnetimage \
	test_line_point.bincnetimage test_line_vert.bincnetimage test_lines_horiz.bincnetimage \
	test_paint_image.bincnetimage test_paint_image_out.bincnetimage test_paint_image_out2.bincnetimage \
	test_save_methode_for_test.bincnetimage test_set_pixel.bincnetimage test_square.bincnetimage \
	test_square_out_right_down.bincnetimage
