INCLUDES = -I$(top_srcdir)/src/libcnet -I$(top_srcdir)/src/libcnet-tests -I$(top_srcdir)/src/libcnetguibase
METASOURCES = AUTO
noinst_DATA = test_render_empty_string.bincnetimage \
	test_render_longer_string.bincnetimage test_render_shorter_string.bincnetimage \
	test_render_shorter_string_focus.bincnetimage
